--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </style>
     </head>
     <body>
-    <img src="michelle.gif" alt="michelle visage">
+    <img src="Cutemouse" alt="Mouse">
     <h1>
     Javek!
     </h1>
     <h2>
-    Github Setup a
+    Github Setup Complete!
     </h2>
     </body>
     </html>
